Fix few layout bugs when upgrading jQuery mob

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -421,6 +421,10 @@ label.dab, legend.dab {
 	border: none;
 }
 
+.ui-controlgroup-controls {
+	width: 100% !important;
+}
+
 .ui-grid-a .doubleInput {
 	width: 40%;
 	margin-right: 2px;
